Update: Updates the Readme.md docmentation

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="google-site-verification" content="esAAZAfVQSFihNR3VNrZNCJOxBqic7JcWwrOlGHbNa4" />
+    <meta name="title" content="Quotes Lab">
+    <meta name="description" content="An awesome web-app that converts an HTML element into an image such as a quote.">
+    <meta name="keywords" content="Quotes Generator, Quotes Maker, Quotes Editor">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+    <meta name="author" content="Gospel Darlington">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
